@@ -7,14 +7,16 @@ import greencity.dto.econewscomment.*;
 import greencity.dto.event.*;
 import greencity.dto.eventcomment.AddEventCommentDtoRequest;
 import greencity.dto.eventcomment.EventCommentVO;
-import greencity.dto.habit.*;
-import greencity.dto.habitfact.*;
+import greencity.dto.habit.HabitAssignPropertiesDto;
+import greencity.dto.habit.HabitAssignVO;
+import greencity.dto.habitfact.HabitFactTranslationVO;
 import greencity.dto.language.LanguageDTO;
 import greencity.dto.language.LanguageTranslationDTO;
 import greencity.dto.language.LanguageVO;
 import greencity.dto.notification.NotificationDto;
 import greencity.dto.notification.NotificationPopUpDto;
 import greencity.dto.ownsecurity.OwnSecurityVO;
+import greencity.dto.place.*;
 import greencity.dto.search.SearchNewsDto;
 import greencity.dto.shoppinglistitem.CustomShoppingListItemResponseDto;
 import greencity.dto.shoppinglistitem.CustomShoppingListItemVO;
@@ -28,6 +30,7 @@ import greencity.entity.localization.TagTranslation;
 import greencity.enums.*;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
+
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
@@ -35,8 +38,12 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.Principal;
-import java.time.*;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.time.ZonedDateTime;
 import java.util.*;
+
 import static greencity.enums.UserStatus.ACTIVATED;
 
 public class ModelUtils {
@@ -78,8 +85,40 @@ public class ModelUtils {
                 NotificationType.ECO_NEWS_LIKE,
                 new Date(),
                 "description1",
-                "content1"
+                "content1",
+                false
         );
+    }
+
+    public static AddPlaceDto getAddPlaceDto() {
+        return new AddPlaceDto("name", "name", List.of(), "name");
+    }
+
+    public static Place getPlace() {
+        Place place = new Place();
+        place.setId(1L);
+        place.setName("name");
+        place.setStatus(PlaceStatus.APPROVED);
+        place.setLocation(new Location());
+        place.setCategory(getCategory());
+//        place.setUser(getUser());
+        place.setPhotos(List.of());
+        return place;
+    }
+
+    public static Category getCategory() {
+        return new Category(1L, "name", "nameUa", new Category(), List.of());
+    }
+
+    public static PlaceAddDto getPlaceAddDto() {
+        return PlaceAddDto.builder()
+                .name("")
+                .category(new CategoryDto("name", "nameUa", 1L))
+                .location(new LocationAddressAndGeoDto("address", 0., 0.))
+                .discountValue(List.of())
+                .openingHoursList(List.of(new OpeningHoursDto(WeekDay.FRIDAY, LocalTime.now(), LocalTime.now(), BreakTimeDto.builder().build())))
+                .photos(List.of(new PhotoAddDto("name")))
+                .build();
     }
 
     public static Tag getTag() {
@@ -88,25 +127,26 @@ public class ModelUtils {
 
     public static Tag getHabitTag() {
         return new Tag(1L, TagType.HABIT, getHabitTagTranslations(), Collections.emptyList(),
-            Collections.emptySet(), Collections.emptySet());
+                Collections.emptySet(), Collections.emptySet());
     }
 
     public static List<TagTranslation> getTagTranslations() {
         return Arrays.asList(
-            TagTranslation.builder().id(1L).name("Новини").language(Language.builder().id(2L).code("ua").build())
-                .build(),
-            TagTranslation.builder().id(2L).name("News").language(Language.builder().id(1L).code("en").build())
-                .build());
+                TagTranslation.builder().id(1L).name("Новини").language(Language.builder().id(2L).code("ua").build())
+                        .build(),
+                TagTranslation.builder().id(2L).name("News").language(Language.builder().id(1L).code("en").build())
+                        .build());
     }
 
     public static List<TagTranslation> getHabitTagTranslations() {
         return Arrays.asList(
-            TagTranslation.builder().id(1L).name("Багаторазове використання")
-                .language(Language.builder().id(2L).code("ua").build())
-                .build(),
-            TagTranslation.builder().id(2L).name("Reusable").language(Language.builder().id(1L).code("en").build())
-                .build());
+                TagTranslation.builder().id(1L).name("Багаторазове використання")
+                        .language(Language.builder().id(2L).code("ua").build())
+                        .build(),
+                TagTranslation.builder().id(2L).name("Reusable").language(Language.builder().id(1L).code("en").build())
+                        .build());
     }
+
     public static NewsSubscriberVO getNewsSubscriberVO() {
         return NewsSubscriberVO.builder().email("subscriber@gmail.com")
                 .unsubscribeToken(UUID.fromString("550e8400-e29b-41d4-a716-446655440000").toString())
@@ -116,9 +156,9 @@ public class ModelUtils {
     public static List<TagTranslation> getEventTagTranslations() {
         Language language = getLanguage();
         return Arrays.asList(
-            TagTranslation.builder().id(1L).name("Соціальний").language(getLanguageUa()).build(),
-            TagTranslation.builder().id(2L).name("Social").language(language).build(),
-            TagTranslation.builder().id(3L).name("Соціальний").language(language).build());
+                TagTranslation.builder().id(1L).name("Соціальний").language(getLanguageUa()).build(),
+                TagTranslation.builder().id(2L).name("Social").language(language).build(),
+                TagTranslation.builder().id(3L).name("Соціальний").language(language).build());
     }
 
     public static TagDto getTagDto() {
@@ -135,78 +175,78 @@ public class ModelUtils {
 
     public static User getUser() {
         return User.builder()
-            .id(1L)
-            .email(TestConst.EMAIL)
-            .name(TestConst.NAME)
-            .role(Role.ROLE_USER)
-            .userStatus(UserStatus.ACTIVATED)
-            .lastActivityTime(localDateTime)
-            .verifyEmail(new VerifyEmail())
-            .dateOfRegistration(localDateTime)
-            .build();
+                .id(1L)
+                .email(TestConst.EMAIL)
+                .name(TestConst.NAME)
+                .role(Role.ROLE_USER)
+                .userStatus(UserStatus.ACTIVATED)
+                .lastActivityTime(localDateTime)
+                .verifyEmail(new VerifyEmail())
+                .dateOfRegistration(localDateTime)
+                .build();
     }
 
     public static UserVO getUserVO() {
         return UserVO.builder()
-            .id(1L)
-            .email(TestConst.EMAIL)
-            .name(TestConst.NAME)
-            .role(Role.ROLE_USER)
-            .lastActivityTime(localDateTime)
-            .verifyEmail(new VerifyEmailVO())
-            .dateOfRegistration(localDateTime)
-            .build();
+                .id(1L)
+                .email(TestConst.EMAIL)
+                .name(TestConst.NAME)
+                .role(Role.ROLE_USER)
+                .lastActivityTime(localDateTime)
+                .verifyEmail(new VerifyEmailVO())
+                .dateOfRegistration(localDateTime)
+                .build();
     }
 
     public static UserManagementVO getUserManagementVO() {
         return UserManagementVO.builder()
-            .id(1L)
-            .userStatus(ACTIVATED)
-            .email("Test@gmail.com")
-            .role(Role.ROLE_ADMIN).build();
+                .id(1L)
+                .userStatus(ACTIVATED)
+                .email("Test@gmail.com")
+                .role(Role.ROLE_ADMIN).build();
     }
 
     public static UserVO getUserVOWithData() {
         return UserVO.builder()
-            .id(13L)
-            .name("user")
-            .email("namesurname1995@gmail.com")
-            .role(Role.ROLE_USER)
-            .userCredo("save the world")
-            .firstName("name")
-            .emailNotification(EmailNotification.MONTHLY)
-            .userStatus(UserStatus.ACTIVATED)
-            .rating(13.4)
-            .verifyEmail(VerifyEmailVO.builder()
-                .id(32L)
-                .user(UserVO.builder()
-                    .id(13L)
-                    .name("user")
-                    .build())
-                .expiryDate(LocalDateTime.of(2021, 7, 7, 7, 7))
-                .token("toooookkkeeeeen42324532542")
-                .build())
-            .userFriends(Collections.singletonList(
-                UserVO.builder()
-                    .id(75L)
-                    .name("Andrew")
-                    .build()))
-            .refreshTokenKey("refreshtoooookkkeeeeen42324532542")
-            .ownSecurity(null)
-            .dateOfRegistration(LocalDateTime.of(2020, 6, 6, 13, 47))
-            .city("Lviv")
-            .showShoppingList(true)
-            .showEcoPlace(true)
-            .showLocation(true)
-            .ownSecurity(OwnSecurityVO.builder()
-                .id(1L)
-                .password("password")
-                .user(UserVO.builder()
-                    .id(13L)
-                    .build())
-                .build())
-            .lastActivityTime(LocalDateTime.of(2020, 12, 11, 13, 30))
-            .build();
+                .id(13L)
+                .name("user")
+                .email("namesurname1995@gmail.com")
+                .role(Role.ROLE_USER)
+                .userCredo("save the world")
+                .firstName("name")
+                .emailNotification(EmailNotification.MONTHLY)
+                .userStatus(UserStatus.ACTIVATED)
+                .rating(13.4)
+                .verifyEmail(VerifyEmailVO.builder()
+                        .id(32L)
+                        .user(UserVO.builder()
+                                .id(13L)
+                                .name("user")
+                                .build())
+                        .expiryDate(LocalDateTime.of(2021, 7, 7, 7, 7))
+                        .token("toooookkkeeeeen42324532542")
+                        .build())
+                .userFriends(Collections.singletonList(
+                        UserVO.builder()
+                                .id(75L)
+                                .name("Andrew")
+                                .build()))
+                .refreshTokenKey("refreshtoooookkkeeeeen42324532542")
+                .ownSecurity(null)
+                .dateOfRegistration(LocalDateTime.of(2020, 6, 6, 13, 47))
+                .city("Lviv")
+                .showShoppingList(true)
+                .showEcoPlace(true)
+                .showLocation(true)
+                .ownSecurity(OwnSecurityVO.builder()
+                        .id(1L)
+                        .password("password")
+                        .user(UserVO.builder()
+                                .id(13L)
+                                .build())
+                        .build())
+                .lastActivityTime(LocalDateTime.of(2020, 12, 11, 13, 30))
+                .build();
     }
 
     public static Language getLanguage() {
@@ -220,166 +260,166 @@ public class ModelUtils {
     public static EcoNews getEcoNews() {
         Tag tag = new Tag();
         tag.setTagTranslations(
-            List.of(TagTranslation.builder().name("Новини").language(Language.builder().code("ua").build()).build(),
-                TagTranslation.builder().name("News").language(Language.builder().code("en").build()).build()));
+                List.of(TagTranslation.builder().name("Новини").language(Language.builder().code("ua").build()).build(),
+                        TagTranslation.builder().name("News").language(Language.builder().code("en").build()).build()));
         return new EcoNews(1L, zonedDateTime, TestConst.SITE, "source", "shortInfo", getUser(),
-            "title", "text", List.of(EcoNewsComment.builder().id(1L).text("test").build()),
-            Collections.singletonList(tag), Collections.emptySet(), Collections.emptySet());
+                "title", "text", List.of(EcoNewsComment.builder().id(1L).text("test").build()),
+                Collections.singletonList(tag), Collections.emptySet(), Collections.emptySet());
     }
 
     public static EcoNews getEcoNewsForFindDtoByIdAndLanguage() {
         return new EcoNews(1L, null, TestConst.SITE, null, "shortInfo", getUser(),
-            "title", "text", null, Collections.singletonList(getTag()), Collections.emptySet(), Collections.emptySet());
+                "title", "text", null, Collections.singletonList(getTag()), Collections.emptySet(), Collections.emptySet());
     }
 
     public static EcoNewsVO getEcoNewsVO() {
         return new EcoNewsVO(1L, zonedDateTime, TestConst.SITE, null, getUserVO(),
-            "title", "text", null, Collections.emptySet(), Collections.singletonList(getTagVO()),
-            Collections.emptySet());
+                "title", "text", null, Collections.emptySet(), Collections.singletonList(getTagVO()),
+                Collections.emptySet());
     }
 
     public static HabitStatusCalendar getHabitStatusCalendar() {
         return HabitStatusCalendar.builder()
-            .enrollDate(LocalDate.now()).id(1L).build();
+                .enrollDate(LocalDate.now()).id(1L).build();
     }
 
     public static HabitAssign getHabitAssign() {
         return HabitAssign.builder()
-            .id(1L)
-            .status(HabitAssignStatus.ACQUIRED)
-            .createDate(ZonedDateTime.now())
-            .habit(Habit.builder()
                 .id(1L)
-                .image("")
-                .habitTranslations(Collections.singletonList(HabitTranslation.builder()
-                    .id(1L)
-                    .name("")
-                    .description("")
-                    .habitItem("")
-                    .language(getLanguage())
-                    .build()))
-                .build())
-            .user(getUser())
-            .userShoppingListItems(new ArrayList<>())
-            .workingDays(0)
-            .duration(0)
-            .habitStreak(0)
-            .habitStatistic(Collections.singletonList(getHabitStatistic()))
-            .habitStatusCalendars(Collections.singletonList(getHabitStatusCalendar()))
-            .lastEnrollmentDate(ZonedDateTime.now())
-            .build();
+                .status(HabitAssignStatus.ACQUIRED)
+                .createDate(ZonedDateTime.now())
+                .habit(Habit.builder()
+                        .id(1L)
+                        .image("")
+                        .habitTranslations(Collections.singletonList(HabitTranslation.builder()
+                                .id(1L)
+                                .name("")
+                                .description("")
+                                .habitItem("")
+                                .language(getLanguage())
+                                .build()))
+                        .build())
+                .user(getUser())
+                .userShoppingListItems(new ArrayList<>())
+                .workingDays(0)
+                .duration(0)
+                .habitStreak(0)
+                .habitStatistic(Collections.singletonList(getHabitStatistic()))
+                .habitStatusCalendars(Collections.singletonList(getHabitStatusCalendar()))
+                .lastEnrollmentDate(ZonedDateTime.now())
+                .build();
     }
 
     public static HabitStatistic getHabitStatistic() {
         return HabitStatistic.builder()
-            .id(1L).habitRate(HabitRate.GOOD).createDate(ZonedDateTime.now())
-            .amountOfItems(10).build();
+                .id(1L).habitRate(HabitRate.GOOD).createDate(ZonedDateTime.now())
+                .amountOfItems(10).build();
     }
 
     public static UserShoppingListItem getCustomUserShoppingListItem() {
         return UserShoppingListItem.builder()
-            .id(1L)
-            .habitAssign(HabitAssign.builder().id(1L).build())
-            .status(ShoppingListItemStatus.DONE)
-            .build();
+                .id(1L)
+                .habitAssign(HabitAssign.builder().id(1L).build())
+                .status(ShoppingListItemStatus.DONE)
+                .build();
     }
 
     public static UserShoppingListItem getFullUserShoppingListItem() {
         return UserShoppingListItem.builder()
-            .id(1L)
-            .shoppingListItem(getShoppingListItem())
-            .habitAssign(HabitAssign.builder().id(1L).build())
-            .status(ShoppingListItemStatus.DONE)
-            .build();
+                .id(1L)
+                .shoppingListItem(getShoppingListItem())
+                .habitAssign(HabitAssign.builder().id(1L).build())
+                .status(ShoppingListItemStatus.DONE)
+                .build();
     }
 
     public static UserShoppingListItemResponseDto getUserShoppingListItemResponseDto() {
         return UserShoppingListItemResponseDto.builder()
-            .id(1L)
-            .text("Buy electric car")
-            .status(ShoppingListItemStatus.ACTIVE)
-            .build();
+                .id(1L)
+                .text("Buy electric car")
+                .status(ShoppingListItemStatus.ACTIVE)
+                .build();
     }
 
     public static UserShoppingListItem getPredefinedUserShoppingListItem() {
         return UserShoppingListItem.builder()
-            .id(2L)
-            .habitAssign(HabitAssign.builder().id(1L).build())
-            .status(ShoppingListItemStatus.ACTIVE)
-            .shoppingListItem(ShoppingListItem.builder().id(1L).userShoppingListItems(Collections.emptyList())
-                .translations(
-                    getShoppingListItemTranslations())
-                .build())
-            .build();
+                .id(2L)
+                .habitAssign(HabitAssign.builder().id(1L).build())
+                .status(ShoppingListItemStatus.ACTIVE)
+                .shoppingListItem(ShoppingListItem.builder().id(1L).userShoppingListItems(Collections.emptyList())
+                        .translations(
+                                getShoppingListItemTranslations())
+                        .build())
+                .build();
     }
 
     public static UserShoppingListItemVO getUserShoppingListItemVO() {
         return UserShoppingListItemVO.builder()
-            .id(1L)
-            .habitAssign(HabitAssignVO.builder()
                 .id(1L)
-                .build())
-            .status(ShoppingListItemStatus.DONE)
-            .build();
+                .habitAssign(HabitAssignVO.builder()
+                        .id(1L)
+                        .build())
+                .status(ShoppingListItemStatus.DONE)
+                .build();
     }
 
     public static UserShoppingListItem getUserShoppingListItem() {
         return UserShoppingListItem.builder()
-            .id(1L)
-            .status(ShoppingListItemStatus.DONE)
-            .habitAssign(HabitAssign.builder()
                 .id(1L)
-                .status(HabitAssignStatus.ACQUIRED)
-                .habitStreak(10)
-                .duration(300)
-                .lastEnrollmentDate(ZonedDateTime.now())
-                .workingDays(5)
-                .build())
-            .shoppingListItem(ShoppingListItem.builder()
-                .id(1L)
-                .build())
-            .dateCompleted(LocalDateTime.of(2021, 2, 2, 14, 2))
-            .build();
+                .status(ShoppingListItemStatus.DONE)
+                .habitAssign(HabitAssign.builder()
+                        .id(1L)
+                        .status(HabitAssignStatus.ACQUIRED)
+                        .habitStreak(10)
+                        .duration(300)
+                        .lastEnrollmentDate(ZonedDateTime.now())
+                        .workingDays(5)
+                        .build())
+                .shoppingListItem(ShoppingListItem.builder()
+                        .id(1L)
+                        .build())
+                .dateCompleted(LocalDateTime.of(2021, 2, 2, 14, 2))
+                .build();
     }
 
     public static List<ShoppingListItemTranslation> getShoppingListItemTranslations() {
         return Arrays.asList(
-            ShoppingListItemTranslation.builder()
-                .id(2L)
-                .language(new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(),
-                    Collections.emptyList()))
-                .content("Buy a bamboo toothbrush")
-                .shoppingListItem(
-                    new ShoppingListItem(1L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
-                .build(),
-            ShoppingListItemTranslation.builder()
-                .id(11L)
-                .language(new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(),
-                    Collections.emptyList()))
-                .content("Start recycling batteries")
-                .shoppingListItem(
-                    new ShoppingListItem(4L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
-                .build());
+                ShoppingListItemTranslation.builder()
+                        .id(2L)
+                        .language(new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(),
+                                Collections.emptyList()))
+                        .content("Buy a bamboo toothbrush")
+                        .shoppingListItem(
+                                new ShoppingListItem(1L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
+                        .build(),
+                ShoppingListItemTranslation.builder()
+                        .id(11L)
+                        .language(new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(),
+                                Collections.emptyList()))
+                        .content("Start recycling batteries")
+                        .shoppingListItem(
+                                new ShoppingListItem(4L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
+                        .build());
     }
 
     public static HabitFactTranslation getFactTranslation() {
         return HabitFactTranslation.builder()
-            .id(1L)
-            .factOfDayStatus(FactOfDayStatus.CURRENT)
-            .habitFact(null)
-            .content("Content")
-            .language(getLanguage())
-            .build();
+                .id(1L)
+                .factOfDayStatus(FactOfDayStatus.CURRENT)
+                .habitFact(null)
+                .content("Content")
+                .language(getLanguage())
+                .build();
     }
 
     public static HabitFactTranslationVO getFactTranslationVO() {
         return HabitFactTranslationVO.builder()
-            .id(1L)
-            .factOfDayStatus(FactOfDayStatus.CURRENT)
-            .habitFact(null)
-            .language(getLanguageVO())
-            .content("Content")
-            .build();
+                .id(1L)
+                .factOfDayStatus(FactOfDayStatus.CURRENT)
+                .habitFact(null)
+                .language(getLanguageVO())
+                .content("Content")
+                .build();
     }
 
     public static LanguageTranslationDTO getLanguageTranslationDTO() {
@@ -402,9 +442,9 @@ public class ModelUtils {
 
     public static AddEcoNewsDtoResponse getAddEcoNewsDtoResponse() {
         return new AddEcoNewsDtoResponse(1L, "title",
-            "text", "shortInfo", EcoNewsAuthorDto.builder().id(1L).name(TestConst.NAME).build(),
-            ZonedDateTime.now(), TestConst.SITE, "source",
-            Arrays.asList("Новини", "News"));
+                "text", "shortInfo", EcoNewsAuthorDto.builder().id(1L).name(TestConst.NAME).build(),
+                ZonedDateTime.now(), TestConst.SITE, "source",
+                Arrays.asList("Новини", "News"));
     }
 
     public static MultipartFile getFile() {
@@ -418,7 +458,7 @@ public class ModelUtils {
             e.printStackTrace();
         }
         return new MockMultipartFile(name,
-            name, contentType, content);
+                name, contentType, content);
     }
 
     public static URL getUrl() throws MalformedURLException {
@@ -431,9 +471,9 @@ public class ModelUtils {
 
     public static List<TagTranslationVO> getTagTranslationsVO() {
         return Arrays.asList(TagTranslationVO.builder().id(1L).name("Новини")
-            .languageVO(LanguageVO.builder().id(1L).code("ua").build()).build(),
-            TagTranslationVO.builder().id(2L).name("News").languageVO(LanguageVO.builder().id(2L).code("en").build())
-                .build());
+                        .languageVO(LanguageVO.builder().id(1L).code("ua").build()).build(),
+                TagTranslationVO.builder().id(2L).name("News").languageVO(LanguageVO.builder().id(2L).code("en").build())
+                        .build());
     }
 
     public static LanguageVO getLanguageVO() {
@@ -450,10 +490,10 @@ public class ModelUtils {
 
     public static List<TagTranslationDto> getTagTranslationDtos() {
         return Arrays.asList(
-            TagTranslationDto.TagTranslationDtoBuilder().name("Новини")
-                .language(LanguageDTO.builder().id(2L).code("ua").build()).build(),
-            TagTranslationDto.TagTranslationDtoBuilder().name("News")
-                .language(LanguageDTO.builder().id(1L).code("en").build()).build());
+                TagTranslationDto.TagTranslationDtoBuilder().name("Новини")
+                        .language(LanguageDTO.builder().id(2L).code("ua").build()).build(),
+                TagTranslationDto.TagTranslationDtoBuilder().name("News")
+                        .language(LanguageDTO.builder().id(1L).code("en").build()).build());
     }
 
     public static TagViewDto getTagViewDto() {
@@ -462,36 +502,36 @@ public class ModelUtils {
 
     public static PageableAdvancedDto<TagVO> getPageableAdvancedDtoForTag() {
         return new PageableAdvancedDto<>(Collections.singletonList(getTagVO()),
-            9, 1, 2, 1,
-            true, false, false, true);
+                9, 1, 2, 1,
+                true, false, false, true);
     }
 
     public static AddEcoNewsCommentDtoResponse getAddEcoNewsCommentDtoResponse() {
         return AddEcoNewsCommentDtoResponse.builder()
-            .id(getEcoNewsComment().getId())
-            .author(getEcoNewsCommentAuthorDto())
-            .text(getEcoNewsComment().getText())
-            .modifiedDate(getEcoNewsComment().getModifiedDate())
-            .build();
+                .id(getEcoNewsComment().getId())
+                .author(getEcoNewsCommentAuthorDto())
+                .text(getEcoNewsComment().getText())
+                .modifiedDate(getEcoNewsComment().getModifiedDate())
+                .build();
     }
 
     public static EcoNewsComment getEcoNewsComment() {
         return EcoNewsComment.builder()
-            .id(1L)
-            .text("text")
-            .createdDate(LocalDateTime.now())
-            .modifiedDate(LocalDateTime.now())
-            .user(getUser())
-            .ecoNews(getEcoNews())
-            .build();
+                .id(1L)
+                .text("text")
+                .createdDate(LocalDateTime.now())
+                .modifiedDate(LocalDateTime.now())
+                .user(getUser())
+                .ecoNews(getEcoNews())
+                .build();
     }
 
     public static EcoNewsCommentAuthorDto getEcoNewsCommentAuthorDto() {
         return EcoNewsCommentAuthorDto.builder()
-            .id(getUser().getId())
-            .name(getUser().getName().trim())
-            .userProfilePicturePath(getUser().getProfilePicturePath())
-            .build();
+                .id(getUser().getId())
+                .name(getUser().getName().trim())
+                .userProfilePicturePath(getUser().getProfilePicturePath())
+                .build();
     }
 
     public static AddEcoNewsCommentDtoRequest getAddEcoNewsCommentDtoRequest() {
@@ -500,168 +540,168 @@ public class ModelUtils {
 
     public static EcoNewsCommentDto getEcoNewsCommentDto() {
         return EcoNewsCommentDto.builder()
-            .id(1L)
-            .modifiedDate(LocalDateTime.now())
-            .author(getEcoNewsCommentAuthorDto())
-            .text("text")
-            .replies(0)
-            .likes(0)
-            .currentUserLiked(false)
-            .status(CommentStatus.ORIGINAL)
-            .build();
+                .id(1L)
+                .modifiedDate(LocalDateTime.now())
+                .author(getEcoNewsCommentAuthorDto())
+                .text("text")
+                .replies(0)
+                .likes(0)
+                .currentUserLiked(false)
+                .status(CommentStatus.ORIGINAL)
+                .build();
     }
 
     public static List<LanguageTranslationDTO> getLanguageTranslationsDTOs() {
         return Arrays.asList(
-            new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "hello"),
-            new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "text"),
-            new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "smile"));
+                new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "hello"),
+                new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "text"),
+                new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "smile"));
     }
 
     public static EcoNewsDto getEcoNewsDto() {
         return new EcoNewsDto(ZonedDateTime.now(), "imagePath", 1L, "title", "content", "text",
-            getEcoNewsAuthorDto(), Collections.singletonList("tag"), Collections.singletonList("тег"), 1, 0, 0);
+                getEcoNewsAuthorDto(), Collections.singletonList("tag"), Collections.singletonList("тег"), 1, 0, 0);
     }
 
     public static EcoNewsGenericDto getEcoNewsGenericDto() {
         String[] tagsEn = {"News"};
         String[] tagsUa = {"Новини"};
         return new EcoNewsGenericDto(1L, "title", "text", "shortInfo",
-            ModelUtils.getEcoNewsAuthorDto(), zonedDateTime, "https://google.com/", "source",
-            List.of(tagsUa), List.of(tagsEn), 0, 1, 0);
+                ModelUtils.getEcoNewsAuthorDto(), zonedDateTime, "https://google.com/", "source",
+                List.of(tagsUa), List.of(tagsEn), 0, 1, 0);
     }
 
     public static EcoNewsDto getEcoNewsDtoForFindDtoByIdAndLanguage() {
         return new EcoNewsDto(null, TestConst.SITE, 1L, "title", "text", "shortInfo",
-            getEcoNewsAuthorDto(), Collections.singletonList("News"), Collections.singletonList("Новини"), 0, 0, 0);
+                getEcoNewsAuthorDto(), Collections.singletonList("News"), Collections.singletonList("Новини"), 0, 0, 0);
     }
 
     public static UpdateEcoNewsDto getUpdateEcoNewsDto() {
         return new UpdateEcoNewsDto(1L, "title", "text", "shortInfo", Collections.singletonList("tag"),
-            "image", "source");
+                "image", "source");
     }
 
     public static SearchNewsDto getSearchNewsDto() {
         return new SearchNewsDto(1L, "title", getEcoNewsAuthorDto(), ZonedDateTime.now(),
-            Collections.singletonList("tag"));
+                Collections.singletonList("tag"));
     }
 
     public static EcoNewsCommentVO getEcoNewsCommentVO() {
         return new EcoNewsCommentVO(1L, "text", LocalDateTime.now(), LocalDateTime.now(), new EcoNewsCommentVO(),
-            new ArrayList<>(), getUserVO(), getEcoNewsVO(), false,
-            false, new HashSet<>());
+                new ArrayList<>(), getUserVO(), getEcoNewsVO(), false,
+                false, new HashSet<>());
     }
 
     public static EcoNewsDtoManagement getEcoNewsDtoManagement() {
         return new EcoNewsDtoManagement(1L, "title", "text", ZonedDateTime.now(),
-            Collections.singletonList("tag"), "imagePath", "source");
+                Collections.singletonList("tag"), "imagePath", "source");
     }
 
     public static EcoNewsViewDto getEcoNewsViewDto() {
         return new EcoNewsViewDto("1", "title", "author", "text", "startDate",
-            "endDate", "tag");
+                "endDate", "tag");
     }
 
     public static ShoppingListItem getShoppingListItem() {
         return ShoppingListItem.builder()
-            .id(1L)
-            .translations(getShoppingListItemTranslations())
-            .build();
+                .id(1L)
+                .translations(getShoppingListItemTranslations())
+                .build();
     }
 
     public static HabitAssignPropertiesDto getHabitAssignPropertiesDto() {
         return HabitAssignPropertiesDto.builder()
-            .defaultShoppingListItems(List.of(1L))
-            .duration(20)
-            .build();
+                .defaultShoppingListItems(List.of(1L))
+                .duration(20)
+                .build();
     }
 
     public static HabitAssign getHabitAssignWithUserShoppingListItem() {
         return HabitAssign.builder()
-            .id(1L)
-            .user(User.builder().id(21L).build())
-            .habit(Habit.builder().id(1L).build())
-            .status(HabitAssignStatus.INPROGRESS)
-            .workingDays(0)
-            .duration(20)
-            .userShoppingListItems(List.of(UserShoppingListItem.builder()
                 .id(1L)
-                .shoppingListItem(ShoppingListItem.builder().id(1L).build())
-                .status(ShoppingListItemStatus.INPROGRESS)
-                .build()))
-            .build();
+                .user(User.builder().id(21L).build())
+                .habit(Habit.builder().id(1L).build())
+                .status(HabitAssignStatus.INPROGRESS)
+                .workingDays(0)
+                .duration(20)
+                .userShoppingListItems(List.of(UserShoppingListItem.builder()
+                        .id(1L)
+                        .shoppingListItem(ShoppingListItem.builder().id(1L).build())
+                        .status(ShoppingListItemStatus.INPROGRESS)
+                        .build()))
+                .build();
     }
 
     private static UserStatusDto createUserStatusDto() {
         return UserStatusDto.builder()
-            .id(2L)
-            .userStatus(UserStatus.CREATED)
-            .build();
+                .id(2L)
+                .userStatus(UserStatus.CREATED)
+                .build();
     }
 
     private static User createUserRoleUser() {
         return User.builder()
-            .id(2L)
-            .role(Role.ROLE_USER)
-            .email("test2@mail.com")
-            .build();
+                .id(2L)
+                .role(Role.ROLE_USER)
+                .email("test2@mail.com")
+                .build();
     }
 
     private static UserVO createUserVORoleUser() {
         return UserVO.builder()
-            .id(2L)
-            .role(Role.ROLE_USER)
-            .email("test2@mail.com")
-            .build();
+                .id(2L)
+                .role(Role.ROLE_USER)
+                .email("test2@mail.com")
+                .build();
     }
 
     private static User createUser() {
         return User.builder()
-            .id(1L)
-            .role(Role.ROLE_MODERATOR)
-            .email("test@mail.com")
-            .build();
+                .id(1L)
+                .role(Role.ROLE_MODERATOR)
+                .email("test@mail.com")
+                .build();
     }
 
     private static UserVO createUserVO() {
         return UserVO.builder()
-            .id(1L)
-            .role(Role.ROLE_MODERATOR)
-            .email("test@mail.com")
-            .build();
+                .id(1L)
+                .role(Role.ROLE_MODERATOR)
+                .email("test@mail.com")
+                .build();
     }
 
     public static List<UserShoppingListItemVO> getUserShoppingListItemVOList() {
         List<UserShoppingListItemVO> list = new ArrayList<>();
         list.add(UserShoppingListItemVO.builder()
-            .id(1L)
-            .build());
+                .id(1L)
+                .build());
         return list;
     }
 
     public static List<CustomShoppingListItemVO> getCustomShoppingListItemVOList() {
         List<CustomShoppingListItemVO> list = new ArrayList<>();
         list.add(CustomShoppingListItemVO.builder()
-            .id(1L)
-            .text("text")
-            .build());
+                .id(1L)
+                .text("text")
+                .build());
         return list;
     }
 
     public static CustomShoppingListItemResponseDto getCustomShoppingListItemResponseDto() {
         return CustomShoppingListItemResponseDto.builder()
-            .id(1L)
-            .status(ShoppingListItemStatus.INPROGRESS)
-            .text("TEXT")
-            .build();
+                .id(1L)
+                .status(ShoppingListItemStatus.INPROGRESS)
+                .text("TEXT")
+                .build();
     }
 
     public static CustomShoppingListItem getCustomShoppingListItem() {
         return CustomShoppingListItem.builder()
-            .id(1L)
-            .status(ShoppingListItemStatus.INPROGRESS)
-            .text("TEXT")
-            .build();
+                .id(1L)
+                .status(ShoppingListItemStatus.INPROGRESS)
+                .text("TEXT")
+                .build();
     }
 
     public static Principal getPrincipal() {
@@ -670,51 +710,51 @@ public class ModelUtils {
 
     public static UserFilterDtoRequest getUserFilterDtoRequest() {
         return UserFilterDtoRequest.builder()
-            .userRole("USER")
-            .name("Test_Filter")
-            .searchCriteria("Test")
-            .userStatus("ACTIVATED")
-            .build();
+                .userRole("USER")
+                .name("Test_Filter")
+                .searchCriteria("Test")
+                .userStatus("ACTIVATED")
+                .build();
     }
 
     public static UserFilterDtoResponse getUserFilterDtoResponse() {
         return UserFilterDtoResponse.builder()
-            .id(1L)
-            .userRole("ADMIN")
-            .searchCriteria("Test")
-            .userStatus("ACTIVATED")
-            .name("Test")
-            .build();
+                .id(1L)
+                .userRole("ADMIN")
+                .searchCriteria("Test")
+                .userStatus("ACTIVATED")
+                .name("Test")
+                .build();
     }
 
     public static Filter getFilter() {
         return Filter.builder()
-            .id(1L)
-            .name("Test")
-            .user(new User())
-            .type("USERS")
-            .values("Test;ADMIN;ACTIVATED")
-            .build();
+                .id(1L)
+                .name("Test")
+                .user(new User())
+                .type("USERS")
+                .values("Test;ADMIN;ACTIVATED")
+                .build();
     }
 
     public static CustomShoppingListItem getCustomShoppingListItemWithStatusInProgress() {
         return CustomShoppingListItem.builder()
-            .id(2L)
-            .habit(Habit.builder()
-                .id(3L)
-                .build())
-            .user(getUser())
-            .text("item")
-            .status(ShoppingListItemStatus.INPROGRESS)
-            .build();
+                .id(2L)
+                .habit(Habit.builder()
+                        .id(3L)
+                        .build())
+                .user(getUser())
+                .text("item")
+                .status(ShoppingListItemStatus.INPROGRESS)
+                .build();
     }
 
     public static CustomShoppingListItemResponseDto getCustomShoppingListItemResponseDtoWithStatusInProgress() {
         return CustomShoppingListItemResponseDto.builder()
-            .id(2L)
-            .text("item")
-            .status(ShoppingListItemStatus.INPROGRESS)
-            .build();
+                .id(2L)
+                .text("item")
+                .status(ShoppingListItemStatus.INPROGRESS)
+                .build();
     }
 
     public static EventResponseDto getEventResponseDto() {
@@ -722,18 +762,33 @@ public class ModelUtils {
                 .id(1L)
                 .title("Lectures on garbage segregation")
                 .description("An event focused on promoting environmental awareness and sustainability practices within the community")
-                .dayList(List.of(EventDayResponseDto.builder()
-                        .id(1L)
-                        .eventDate(LocalDate.parse("2024-12-16"))
-                        .eventStartTime(LocalTime.parse("09:00:00"))
-                        .eventEndTime(LocalTime.parse("20:00:00"))
-                        .latitude(47.985)
-                        .longitude(-122.559)
-                        .isOnline(true)
-                        .onlineLink("https://example.com/event-link")
-                        .build()))
+                .dayList(List.of(getEventDayDto()))
                 .additionalImages(Collections.emptyList())
                 .image(AppConstant.DEFAULT_EVENT_IMAGE)
+                .build();
+    }
+
+    public static EventDayCreateRequestDto getEventDayCreateRequestDto() {
+        return EventDayCreateRequestDto.builder()
+                .eventDate(LocalDate.parse("2024-12-16"))
+                .eventDate(LocalDate.parse("2024-12-16"))
+                .eventStartTime(LocalTime.parse("09:00:00"))
+                .eventEndTime(LocalTime.parse("20:00:00"))
+                .isOnline(true)
+                .onlineLink("https://example.com/event-link")
+                .build();
+
+    }
+
+    public static EventDayDto getEventDayDto() {
+        return EventDayDto.builder()
+                .id(1L)
+                .eventDate(LocalDate.parse("2024-12-16"))
+                .eventDate(LocalDate.parse("2024-12-16"))
+                .eventStartTime(LocalTime.parse("09:00:00"))
+                .eventEndTime(LocalTime.parse("20:00:00"))
+                .isOnline(true)
+                .onlineLink("https://example.com/event-link")
                 .build();
     }
 
@@ -742,16 +797,14 @@ public class ModelUtils {
                 .id(1L)
                 .title("Lectures on garbage segregation")
                 .description("An event focused on promoting environmental awareness and sustainability practices within the community")
-                .eventDays(List.of(EventDayDto.builder()
+                .eventDays(new ArrayList<>(List.of(EventDayDto.builder()
                         .id(1L)
                         .eventDate(LocalDate.parse("2024-12-16"))
                         .eventStartTime(LocalTime.parse("09:00:00"))
                         .eventEndTime(LocalTime.parse("20:00:00"))
-                        .latitude(47.985)
-                        .longitude(-122.559)
                         .isOnline(true)
                         .onlineLink("https://example.com/event-link")
-                        .build()))
+                        .build())))
                 .additionalImages(Collections.emptyList())
                 .image(AppConstant.DEFAULT_EVENT_IMAGE)
                 .build();
@@ -763,16 +816,14 @@ public class ModelUtils {
                 .title("Lectures on garbage segregation")
                 .description("An event focused on promoting environmental awareness and sustainability practices within the community")
                 .organizer(getUser())
-                .eventDays(List.of(EventDay.builder()
+                .eventDays(new ArrayList<>(List.of(EventDay.builder()
                         .id(1L)
                         .eventDate(LocalDate.parse("2024-12-16"))
                         .eventStartTime(LocalTime.parse("09:00:00"))
                         .eventEndTime(LocalTime.parse("20:00:00"))
-                        .latitude(47.985)
-                        .longitude(-122.559)
                         .isOnline(true)
                         .onlineLink("https://example.com/event-link")
-                        .build()))
+                        .build())))
                 .additionalImages(Collections.emptyList())
                 .image(AppConstant.DEFAULT_EVENT_IMAGE)
                 .build();
@@ -784,12 +835,11 @@ public class ModelUtils {
                 .eventDate(LocalDate.parse("2024-12-16"))
                 .eventStartTime(LocalTime.parse("09:00:00"))
                 .eventEndTime(LocalTime.parse("20:00:00"))
-                .latitude(47.985)
-                .longitude(-122.559)
                 .isOnline(true)
                 .onlineLink("https://example.com/event-link")
                 .build();
     }
+
     public static AddEventCommentDtoRequest getEventCommentDtoRequest() {
         return AddEventCommentDtoRequest.builder().comment("Test Comment").build();
     }
@@ -797,12 +847,14 @@ public class ModelUtils {
     public static EventCommentVO getEventCommentVO() {
         return EventCommentVO.builder()
                 .event(getEventVO())
+                .modifiedDate(LocalDateTime.of(2024, 12, 30, 10, 0))
                 .comment("Example comment")
                 .deleted(false)
                 .id(1L)
                 .user(getUserVO())
                 .build();
     }
+
     public static EventComment getEventComment() {
         return EventComment.builder()
                 .event(getEvent())
@@ -812,6 +864,7 @@ public class ModelUtils {
                 .user(getUser())
                 .build();
     }
+
     public static EventVO getEventVO() {
         return EventVO.builder()
                 .id(1L)
